# hackui2024

./: README.md  pyproject.toml
data/: artist_bios.json  image_descriptions.json  lerandom.art - Artists.csv
src/hackathon_genart/: __init__.py  artblocks.py  cli.py  lerandom.py  minhash.py  objkt.py  ttypes.py
stored_artist_index/: docstore.json  index_store.json
stored_collection_index/: docstore.json  index_store.json
stored_token_index/: index_store.json
