[project]
name = "hackathon-genart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index>=0.11.16",
    "typer>=0.12.5",
    "prettyprinter>=0.18.0",
    "llama-index-llms-mistralai>=0.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
