[project]
name = "hackathon-genart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index>=0.11.16",
    "typer>=0.12.5",
    "prettyprinter>=0.18.0",
    "llama-index-llms-mistralai>=0.2.5",
    "llama-index-readers-web>=0.2.3",
    "httpx>=0.27.2",
    "rich>=13.9.2",
    "llama-index-postprocessor-cohere-rerank>=0.2.1",
    "tqdm>=4.66.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
